<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.expenditure.ExpenditureFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="Monthly Expenditure" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="@color/color_white"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <org.eazegraph.lib.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:padding="5dp"

                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:background="@color/Groceries" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Groceries"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvGroceries"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:background="@color/Furniture" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Furniture"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvFurniture"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:background="@color/IT" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="IT"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvIT"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:background="@color/DailyNecessities" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="DailyNecessities"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvDailyNecessities"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:background="@color/Others" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:text="Others"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tvOthers"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="sans-serif-light"
                            android:text="0"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


    <TextView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/your_budget_this_month"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/budget_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/_200"
        android:textSize="27sp"
        android:inputType="number" />

    <Button
        android:id="@+id/submit_budget_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_budget" />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/leftover_amount"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/remaining_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/update_budget_above"
        android:textSize="20sp" />

</LinearLayout>